--- a/config.json
+++ b/config.json
@@ -2,4 +2,8 @@
   "version": "0.1.0",
   "name": "Shlog.js",
   "title": "CORS enabled website"
+  "author": {
+    "facebook": "http://facebook.com/GovnjivaMotka",
+    "twitter": "http://twitter.com/GovnjivaMotka"
+  }
 }
