--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "version": "0.1.0",
   "name": "Shlog.js",
-  "title": "CORS enabled website"
+  "title": "CORS enabled website",
   "author": {
     "facebook": "http://facebook.com/GovnjivaMotka",
     "twitter": "http://twitter.com/GovnjivaMotka"
