--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "name": "Shlog.js",
   "title": "CORS enabled website",
   "author": {
+    "name": "Шлогирани чоек",
     "facebook": "http://facebook.com/GovnjivaMotka",
     "twitter": "http://twitter.com/GovnjivaMotka"
   }
