--- a/config.json
+++ b/config.json
@@ -1,18 +1,20 @@
 {
-    "version": "0.1.0",
-    "name": "Shlog.js",
-    "title": "CORS enabled website",
-    "about": "",
-    "author": {
-        "name": "Шлогирани чоек",
+    "config": {
+        "version": "0.1.0",
+        "name": "Shlog.js",
+        "title": "CORS enabled website",
         "about": "",
-        "contact": {
-            "email": "slogiranicoek@slog.com"
-        },
-        "social": {
-            "facebook": "http://facebook.com/GovnjivaMotka",
-            "twitter": "http://twitter.com/GovnjivaMotka",
-            "github": "https://github.com/slogiranicoek"
+        "author": {
+            "name": "Шлогирани чоек",
+            "about": "",
+            "contact": {
+                "email": "slogiranicoek@slog.com"
+            },
+            "social": {
+                "facebook": "http://facebook.com/GovnjivaMotka",
+                "twitter": "http://twitter.com/GovnjivaMotka",
+                "github": "https://github.com/slogiranicoek"
+            }
         }
     }
 }
